# junk-rs

./: Cargo.toml
.github/workflows/: release.yaml
src/: main.rs  serde_helper.rs
src/json/: mod.rs  sort_config.rs  sort_policy.rs
src/xml/: maven.rs  mod.rs  sort_pom.rs
