[package]
name = "junk"
version = "0.2.0"
edition = "2021"
description = "Tiny tiny utilities that nobody will be happy."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
clap = { version = "3.2.16", features = ["derive"] }
indexmap = "1.9.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
xml-rs = "0.8.4"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"

[dev-dependencies]
serde_test = "1.0.142"
