[package]
name = "junk"
version = "0.3.0"
edition = "2021"
description = "Tiny tiny utilities that nobody will be happy."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
indexmap = "2.0.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
xml-rs = "0.8.16"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"

[dev-dependencies]
serde_test = "1.0.176"

[profile.release]
codegen-units = 1
lto = true
strip = true
