[package]
name = "junk"
version = "0.3.0"
edition = "2021"
description = "Tiny tiny utilities that nobody will be happy."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
indexmap = "2.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
xml-rs = "0.8.24"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"

[dev-dependencies]
serde_test = "1.0.176"

[profile.release]
codegen-units = 1
lto = true
strip = true
